--- a/views/sponsors.html
+++ b/views/sponsors.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="./sponsors.css">
+    <link rel="stylesheet" href="../css/sponsors.css">
     <!-- <link rel="icon" href=""> -->
     <link rel="icon" href="./static files/UDGAM logo (title).png" type="image/icon type">
 
@@ -36,7 +36,7 @@
                     <!-- <a href="#"> logo </a> -->
                 </div>
                 <div class="rightnav">
-                    <a href="./Ourteams.html"> TEAM </a>
+                    <a href="./ourteams.html"> TEAM </a>
                     <a href="./sponsors.html"> SPONSORS </a>
                     <a href="./contact us.html"> CONTACT US </a>
                     <a href="./Registeration.html"> SIGNUP </a>
