--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,9 +12,9 @@
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" href="./font/stylesheet.css">
-    <link rel="icon" href="./static files/UDGAM logo (title).png" type="image/icon type">
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../font/stylesheet.css">
+    <link rel="icon" href="../static files/UDGAM logo (title).png" type="image/icon type">
 
 
     <!-- link for font awesome -->
@@ -22,7 +22,7 @@
         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="./hamberger.css">
+    <link rel="stylesheet" href="../css/hamberger.css">
 </head>
 <body>
     <div class="stars"></div>
