--- a/views/registeration.ejs
+++ b/views/registeration.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register NOW</title>
 
-    <link rel="stylesheet" href="./Registeration.css">
+    <link rel="stylesheet" href="../css/registeration.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -27,7 +27,7 @@
         <div class="container content">
             <div class="row">
                 <div class="col-sm-5 ProfilePic">
-                    <img id="ProfilePic" src = "Static Files\img_avatar.png">
+                    <img id="ProfilePic" src = "../Static Files\img_avatar.png">
                 </div>
                 <div class="col-sm-7 RegistrationDetails" style="margin-top: 0%;">
                     <label for="fname" style="margin-top: 0px">NAME</label>
