--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -12,10 +12,10 @@
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="../css/index.css">
 
-    <link rel="stylesheet" href="./font/stylesheet.css">
-    <link rel="icon" href="./static files/UDGAM logo (title).png" type="image/icon type">
+    <link rel="stylesheet" href="../font/stylesheet.css">
+    <link rel="icon" href="../static files/UDGAM logo (title).png" type="image/icon type">
 
     <!-- link for font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
@@ -84,10 +84,10 @@
                     <!-- <a href="#"> logo </a> -->
                 </div>
                 <div class="rightnav">
-                    <a href="./Ourteams.html"> TEAM </a>
+                    <a href="./ourteams.html"> TEAM </a>
                     <a href="./sponsors.html"> SPONSORS </a>
                     <a href="./contact us.html"> CONTACT US </a>
-                    <a href="./Registeration.html"> SIGNUP </a>
+                    <a href="./registeration.html"> SIGNUP </a>
                 </div>
 
             </div>
@@ -115,7 +115,7 @@
             <div  class="container">
                 <div class="speaker-info">
                     <div class="speaker" data-toggle="modal" data-target="#exampleModalCenter1">
-                        <img class="speaker__img" src="./static files/speaker.png" alt="speaker img">
+                        <img class="speaker__img" src="../static files/speaker.png" alt="speaker img">
                         <div class="speaker-side-name">
                             FOUNDER
                         </div>
@@ -135,21 +135,21 @@
                                     <div class="row">
                                         <div class = "col-md-4" style="background-color: #333333; justify-content: space-between;">
                                             <div class="row">
-                                                <img class="col-md-10 modalspeaker__img" src="./static files/speaker.png" alt="speaker img">
+                                                <img class="col-md-10 modalspeaker__img" src="../static files/speaker.png" alt="speaker img">
                                                 <div class="col-md-2 modal-social">
                                                     <a href="https://www.facebook.com/ecell.iitg/" target="_blank"
                                                         class="modalicons">
-                                                        <img class="facebook button" src="static files\facebook.svg"
+                                                        <img class="facebook button" src="../static files\facebook.svg"
                                                             style="width: 32px; height:32px;">
                                                     </a>
                                                     <a href="https://www.linkedin.com/company/ecell-iitg/" target="_blank"
                                                         class="modalicons">
-                                                        <img class="linkedin button" src="static files\linkedin.svg"
+                                                        <img class="linkedin button" src="../static files\linkedin.svg"
                                                             style="width: 32px; height:32px;">
                                                     </a>
                                                     <a href="https://www.instagram.com/ecell_iitg/" target="_blank"
                                                         class="modalicons">
-                                                        <img class="discord button" src="static files\discord.svg"
+                                                        <img class="discord button" src="../static files\discord.svg"
                                                             style="width: 32px; height:32px;">
                                                     </a>
                                                 </div>
@@ -194,7 +194,7 @@
 
                     <div class="speaker" data-toggle="modal" data-target="#exampleModalCenter2"
                         data-target="#exampleModalCenter2">
-                        <img src="./static files/speaker.png" alt="speaker img">
+                        <img src="../static files/speaker.png" alt="speaker img">
                         <div class="speaker-side-name">
                             CEO
                         </div>
@@ -209,7 +209,7 @@
                                     <div class="row">
                                         <div class = "col-md-4" style="background-color: #333333; justify-content: space-between;">
                                             <div class="row">
-                                                <img class="col-md-10 modalspeaker__img" src="./static files/speaker.png" alt="speaker img">
+                                                <img class="col-md-10 modalspeaker__img" src="../static files/speaker.png" alt="speaker img">
                                                 <div class="col-md-2 modal-social">
                                                     <a href="https://www.facebook.com/ecell.iitg/" target="_blank"
                                                         class="modalicons">
@@ -266,7 +266,7 @@
 
 
                     <div class="speaker" data-toggle="modal" data-target="#exampleModalCenter3">
-                        <img src="./static files/speaker.png" alt="speaker img">
+                        <img src="../static files/speaker.png" alt="speaker img">
                         <div class="speaker-side-name">
                             CTO
                         </div>
@@ -281,7 +281,7 @@
                                     <div class="row">
                                         <div class = "col-md-4" style="background-color: #333333; justify-content: space-between;">
                                             <div class="row">
-                                                <img class="col-md-10 modalspeaker__img" src="./static files/speaker.png" alt="speaker img">
+                                                <img class="col-md-10 modalspeaker__img" src="../static files/speaker.png" alt="speaker img">
                                                 <div class="col-md-2 modal-social">
                                                     <a href="https://www.facebook.com/ecell.iitg/" target="_blank"
                                                         class="modalicons">
@@ -337,7 +337,7 @@
                     </div>
 
                     <div class="speaker" data-toggle="modal" data-target="#exampleModalCenter4">
-                        <img src="./static files/speaker.png" alt="speaker img">
+                        <img src="../static files/speaker.png" alt="speaker img">
                         <div class="speaker-side-name">
                             OWNER
                         </div>
@@ -352,7 +352,7 @@
                                     <div class="row">
                                         <div class = "col-md-4" style="background-color: #333333; justify-content: space-between;">
                                             <div class="row">
-                                                <img class="col-md-10 modalspeaker__img" src="./static files/speaker.png" alt="speaker img">
+                                                <img class="col-md-10 modalspeaker__img" src="static files/speaker.png" alt="speaker img">
                                                 <div class="col-md-2 modal-social">
                                                     <a href="https://www.facebook.com/ecell.iitg/" target="_blank"
                                                         class="modalicons">
@@ -408,7 +408,7 @@
                     </div>
 
                     <div class="speaker" data-toggle="modal" data-target="#exampleModalCenter5">
-                        <img src="./static files/speaker.png" alt="speaker img">
+                        <img src="../static files/speaker.png" alt="speaker img">
                         <div class="speaker-side-name">
                             MEMBER
                         </div>
@@ -423,7 +423,7 @@
                                     <div class="row">
                                         <div class = "col-md-4" style="background-color: #333333; justify-content: space-between;">
                                             <div class="row">
-                                                <img class="col-md-10 modalspeaker__img" src="./static files/speaker.png" alt="speaker img">
+                                                <img class="col-md-10 modalspeaker__img" src="../static files/speaker.png" alt="speaker img">
                                                 <div class="col-md-2 modal-social">
                                                     <a href="https://www.facebook.com/ecell.iitg/" target="_blank"
                                                         class="modalicons">
@@ -479,7 +479,7 @@
                     </div>
 
                     <div class="speaker" data-toggle="modal" data-target="#exampleModalCenter6">
-                        <img src="./static files/speaker.png" alt="speaker img">
+                        <img src="../static files/speaker.png" alt="speaker img">
                         <div class="speaker-side-name">
                             EMPLOYEE
                         </div>
@@ -494,7 +494,7 @@
                                     <div class="row">
                                         <div class = "col-md-4" style="background-color: #333333; justify-content: space-between;">
                                             <div class="row">
-                                                <img class="col-md-10 modalspeaker__img" src="./static files/speaker.png" alt="speaker img">
+                                                <img class="col-md-10 modalspeaker__img" src="../static files/speaker.png" alt="speaker img">
                                                 <div class="col-md-2 modal-social">
                                                     <a href="https://www.facebook.com/ecell.iitg/" target="_blank"
                                                         class="modalicons">
