--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -12,8 +12,8 @@
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="./dashboard.css">
-    <link rel="stylesheet" href="./font/stylesheet.css">
+    <link rel="stylesheet" href="../css/dashboard.css">
+    <link rel="stylesheet" href="../font/stylesheet.css">
     <link rel="icon" href="Group 33786.png">
 
     <!-- link for font awesome -->
