--- a/views/events.ejs
+++ b/views/events.ejs
@@ -13,18 +13,18 @@
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="./events.css">
-    <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" href="./font/stylesheet.css">
+    <link rel="stylesheet" href="../css/events.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../font/stylesheet.css">
 
     <!-- <link rel="icon" href=""> -->
-    <link rel="icon" href="./static files/UDGAM logo (title).png" type="image/icon type">
+    <link rel="icon" href="../static files/UDGAM logo (title).png" type="image/icon type">
     <!-- link for font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="./carousel/style.css">
+    <link rel="stylesheet" href="../carousel/style.css">
 </head>
 
 <body>
@@ -299,7 +299,7 @@
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
 
-    <script src="./carousel/main.js">
+    <script src="../carousel/main.js">
     </script>
 
     <script>
