--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="./font/stylesheet.css">
     <link rel="icon" href="./static files/UDGAM logo (title).png" type="image/icon type">
 
