--- a/views/home.ejs
+++ b/views/home.ejs
@@ -54,7 +54,7 @@
                     <a href="./Ourteams.html"> TEAM </a>
                     <a href="./sponsors.html"> SPONSORS </a>
                     <a href="./contact us.html"> CONTACT US </a>
-                    <a href="./Registeration.html"> SIGNUP </a>
+                    <a href="/login"> LogIn </a>
                 </div>
 
             </div>
