--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,7 +30,7 @@
         <div class="content">
             <div class="row">
                 <div class="col-md-5 ProfilePic">
-                    <img id="ProfilePic" src = "Static Files\img_avatar.png">
+                    <img id="ProfilePic" src = "static files\img_avatar.png">
                 </div>
                 <div class="col-md-7 RegistrationDetails" style="margin-top: 0%;">
                     <label for="emailID">EMAIL ID / PHONE</label>
