--- a/views/index.ejs
+++ b/views/index.ejs
@@ -502,14 +502,14 @@
                                 <div class="row justify-content-between">
                                     <div class="col-4">
                                         <button type="button" class="btn btn-outline-secondary" style="color: #00b0e0;">
-                                            <a href="#" style="color: #00b0e0;">
+                                            <a href="/purchase" style="color: #00b0e0;">
 
                                                 Buy Pass</button>
                                         </a>
                                     </div>
                                     <div class="col-4" style="padding-left: 55px;">
                                         <button type="button" class="btn btn-outline-secondary"><a style="color: white;"
-                                                href="#">Know More</a></button>
+                                                href="/purchase">Know More</a></button>
                                     </div>
                                 </div>
                             </div>
@@ -535,14 +535,14 @@
                                 <div class="row justify-content-between justify-content-between">
                                     <div class="col-4">
                                         <button type="button" class="btn btn-outline-secondary" style="color: #00b0e0;">
-                                            <a href="#" style="color: #00b0e0;">
+                                            <a href="/purchase" style="color: #00b0e0;">
 
                                                 Buy Pass</button>
                                         </a>
                                     </div>
                                     <div class="col-4" style="padding-left: 55px;">
                                         <button type="button" class="btn btn-outline-secondary"><a style="color: white;"
-                                                href="#">Know More</a></button>
+                                                href="/purchase">Know More</a></button>
                                     </div>
 
                                 </div>
@@ -571,7 +571,7 @@
                                 <div class="row justify-content-between">
                                     <div class="col-4">
                                         <button type="button" class="btn btn-outline-secondary" style="color: #00b0e0;">
-                                            <a href="#" style="color: #00b0e0;">
+                                            <a href="/purchase" style="color: #00b0e0;">
 
                                                 Buy Pass</button>
                                         </a>
@@ -604,7 +604,7 @@
                                 <div class="row justify-content-between">
                                     <div class="col-4">
                                         <button type="button" class="btn btn-outline-secondary" style="color: #00b0e0;">
-                                            <a href="#" style="color: #00b0e0;">
+                                            <a href="/purchase" style="color: #00b0e0;">
 
                                                 Buy Pass</button>
                                         </a>
@@ -641,7 +641,7 @@
                                 <div class="row justify-content-between">
                                     <div class="col-4">
                                         <button type="button" class="btn btn-outline-secondary" style="color: #00b0e0;">
-                                            <a href="#" style="color: #00b0e0;">
+                                            <a href="/purchase" style="color: #00b0e0;">
 
                                                 Buy Pass</button>
                                         </a>
@@ -675,7 +675,7 @@
                                 <div class="row justify-content-between">
                                     <div class="col-4">
                                         <button type="button" class="btn btn-outline-secondary" style="color: #00b0e0;">
-                                            <a href="#" style="color: #00b0e0;">
+                                            <a href="/purchase" style="color: #00b0e0;">
 
                                                 Buy Pass</button>
                                         </a>
